--- a/chess.qrc
+++ b/chess.qrc
@@ -16,9 +16,16 @@
         <file>images/w_soldier.png</file>
         <file>Units.qml</file>
         <file>logic.js</file>
-        <file>Add_player.qml</file>
-        <file>Add_playerForm.ui.qml</file>
         <file>Ranking.qml</file>
         <file>RankingForm.ui.qml</file>
+        <file>AddPlayer.qml</file>
+        <file>GameResult.qml</file>
+        <file>images/QtIcon.png</file>
+        <file>images/flower.png</file>
+        <file>MainMenu.qml</file>
+        <file>GameForm.qml</file>
+        <file>images/colortable.png</file>
+        <file>GlobalVariables.qml</file>
+        <file>qmldir</file>
     </qresource>
 </RCC>
