Improved UI. Made progress in load/save/... methods. sorted project files in seperate directories.

--- a/chess.qrc
+++ b/chess.qrc
@@ -1,31 +1,53 @@
 <RCC>
     <qresource prefix="/">
-        <file>board.qml</file>
-        <file>graphic.js</file>
-        <file>images/b_bishop.png</file>
-        <file>images/about.png</file>
-        <file>images/b_horse.png</file>
-        <file>images/b_king.png</file>
-        <file>images/b_queen.png</file>
-        <file>images/b_rock.png</file>
-        <file>images/b_soldier.png</file>
-        <file>images/w_bishop.png</file>
-        <file>images/w_horse.png</file>
-        <file>images/w_king.png</file>
-        <file>images/w_queen.png</file>
-        <file>images/w_rock.png</file>
+        <file>src/cpp/main.cpp</file>
+        <file>src/cpp/gameutils.h</file>
+        <file>src/cpp/gameutils.cpp</file>
+        <file>src/qml/Units.qml</file>
+        <file>src/qml/RankingForm.ui.qml</file>
+        <file>src/qml/Ranking.qml</file>
+        <file>src/qml/qmldir</file>
+        <file>src/qml/MainMenu.qml</file>
+        <file>src/qml/GlobalVariables.qml</file>
+        <file>src/qml/GameResult.qml</file>
+        <file>src/qml/GameForm.qml</file>
+        <file>src/qml/chess.qml</file>
+        <file>src/qml/board.qml</file>
+        <file>src/qml/AddPlayer.qml</file>
+        <file>src/qml/About.qml</file>
+        <file>src/js/logic.js</file>
+        <file>src/js/graphic.js</file>
+        <file>images/w_soldier.svg</file>
         <file>images/w_soldier.png</file>
-        <file>Units.qml</file>
-        <file>logic.js</file>
-        <file>Ranking.qml</file>
-        <file>RankingForm.ui.qml</file>
-        <file>AddPlayer.qml</file>
-        <file>GameResult.qml</file>
-        <file>MainMenu.qml</file>
-        <file>GameForm.qml</file>
+        <file>images/w_rock.svg</file>
+        <file>images/w_rock.png</file>
+        <file>images/w_queen.svg</file>
+        <file>images/w_queen.png</file>
+        <file>images/w_king.svg</file>
+        <file>images/w_king.png</file>
+        <file>images/w_horse.svg</file>
+        <file>images/w_horse.png</file>
+        <file>images/white.png</file>
+        <file>images/w_bishop.svg</file>
+        <file>images/w_bishop.png</file>
         <file>images/colortable.png</file>
-        <file>qmldir</file>
-        <file>GlobalVariables.qml</file>
-        <file>About.qml</file>
+        <file>images/b_soldier.svg</file>
+        <file>images/b_soldier.png</file>
+        <file>images/b_rock.svg</file>
+        <file>images/b_rock.png</file>
+        <file>images/b_queen.svg</file>
+        <file>images/b_queen.png</file>
+        <file>images/black.png</file>
+        <file>images/b_king.svg</file>
+        <file>images/b_king.png</file>
+        <file>images/b_horse.svg</file>
+        <file>images/b_horse.png</file>
+        <file>images/b_bishop.svg</file>
+        <file>images/b_bishop.png</file>
+        <file>android/build.gradle</file>
+        <file>android/AndroidManifest.xml</file>
+        <file>android/res/drawable-mdpi/icon.png</file>
+        <file>android/res/drawable-ldpi/icon.png</file>
+        <file>android/res/drawable-hdpi/icon.png</file>
     </qresource>
 </RCC>
